[package]
name = "serde_json_path"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "Parse serde_json Values using JSONPath queries"
documentation = "https://docs.rs/serde_json_path"
repository = "https://github.com/hiltontj/serde_json_path"
readme = "README.md"
keywords = ["json", "jsonpath", "json_path", "serde", "serde_json"]

[profile.dev]
incremental = false

[profile.release]
codegen-units = 1

[features]
default = ["registry"]
trace = ["dep:tracing"]
registry = []

[dependencies]
inventory = { version = "0.3.4" }
nom = "7.1.3"
once_cell = { version = "1.17.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.38"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
env_logger = "*"
test-log = { version = "0.2.11", default-features = false, features=["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features=["env-filter", "fmt"] }