[workspace]
members = [
    "serde_json_path",
    "serde_json_path_core",
    "serde_json_path_macros",
    "serde_json_path_macros/src/internal"
]
resolver = "2"

[workspace.dependencies]
# crates.io crates:
inventory = { version = "0.3.15" }
nom = "7.1.3"
proc-macro2 = "1.0.89"
quote = "1.0.37"
regex = { version="1.11.1" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
syn = { version = "2.0.87", features = ["full"] }
thiserror = "2.0.3"
tracing = { version = "0.1.40" }

# dev dependencies
test-log = { version = "0.2.11", default-features = false, features=["trace"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features=["env-filter", "fmt"] }

[profile.dev]
incremental = false

[profile.release]
codegen-units = 1
