[workspace]
members = [
    "serde_json_path",
    "serde_json_path_core",
    "serde_json_path_macros",
    "serde_json_path_macros/src/internal"
]
resolver = "2"

[workspace.dependencies]
# crates.io crates:
inventory = { version = "0.3.19" }
nom = "8.0.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
regex = { version="1.11.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
syn = { version = "2.0.97", features = ["full"] }
thiserror = "2.0.11"
tracing = { version = "0.1.40" }

# dev dependencies
test-log = { version = "0.2.17", default-features = false, features=["trace"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features=["env-filter", "fmt"] }

[profile.dev]
incremental = false

[profile.release]
codegen-units = 1
