[package]
name = "serde_json_path"
version = "0.6.4"
edition = "2021"
license = "MIT"
authors = ["Trevor Hilton <trevor.hilton@gmail.com>"]
description = "Query serde_json Values using JSONPath"
documentation = "https://docs.rs/serde_json_path"
repository = "https://github.com/hiltontj/serde_json_path"
readme = "README.md"
keywords = ["json", "jsonpath", "json_path", "serde", "serde_json"]

[features]
default = ["functions"]
trace = ["dep:tracing", "serde_json_path_core/trace"]
functions = ["serde_json_path_core/functions"]

[dependencies]
inventory = { version = "0.3.4" }
nom = "7.1.3"
once_cell = { version = "1.17.1" }
regex = "1.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_path_core = { path = "../serde_json_path_core", version = "0.1.3" }
serde_json_path_macros = { path = "../serde_json_path_macros", version = "0.1.1" }
thiserror = "1.0"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
test-log = { version = "0.2.11", default-features = false, features=["trace"] }
tracing-subscriber = { version = "0.3", default-features = false, features=["env-filter", "fmt"] }
