[package]
name = "serde_json_path"
version = "0.6.7"
edition = "2021"
license = "MIT"
authors = ["Trevor Hilton <trevor.hilton@gmail.com>"]
description = "Query serde_json Values using JSONPath"
documentation = "https://docs.rs/serde_json_path"
repository = "https://github.com/hiltontj/serde_json_path"
readme = "README.md"
keywords = ["json", "jsonpath", "json_path", "serde", "serde_json"]

[features]
default = ["functions", "regex"]
regex = ["dep:regex"]
trace = ["dep:tracing", "serde_json_path_core/trace"]
functions = ["serde_json_path_core/functions"]

[dependencies]
# crates.io crates:
inventory = { version = "0.3.15" }
nom = "7.1.3"
regex = { version="1.11.1", optional = true }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.1"
thiserror = "1.0.67"
tracing = { version = "0.1.40", optional = true }

# local crates:
serde_json_path_core = { path = "../serde_json_path_core", version = "0.1.6" }
serde_json_path_macros = { path = "../serde_json_path_macros", version = "0.1.4" }

[dev-dependencies]
test-log = { version = "0.2.11", default-features = false, features=["trace"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features=["env-filter", "fmt"] }
