[package]
name = "serde_json_path"
version = "0.7.1"
edition = "2021"
license = "MIT"
authors = ["Trevor Hilton <trevor.hilton@gmail.com>"]
description = "Query serde_json Values using JSONPath"
documentation = "https://docs.rs/serde_json_path"
repository = "https://github.com/hiltontj/serde_json_path"
readme = "README.md"
keywords = ["json", "jsonpath", "json_path", "serde", "serde_json"]

[features]
default = ["functions", "regex"]
regex = ["dep:regex"]
trace = ["dep:tracing", "serde_json_path_core/trace"]
functions = ["serde_json_path_core/functions"]

[dependencies]
# local crates:
serde_json_path_core = { path = "../serde_json_path_core", version = "0.2.1" }
serde_json_path_macros = { path = "../serde_json_path_macros", version = "0.1.5" }

# crates.io crates:
inventory.workspace = true
nom.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dependencies.regex]
workspace = true
optional = true

[dependencies.tracing]
workspace = true
optional = true

[dev-dependencies]
test-log.workspace = true
tracing-subscriber.workspace = true
