[package]
name = "serde_json_path_core"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Trevor Hilton <trevor.hilton@gmail.com>"]
description = "Core types for the serde_json_path crate"
repository = "https://github.com/hiltontj/serde_json_path"
readme = "README.md"
keywords = ["json", "jsonpath", "json_path", "serde", "serde_json"]

[lib]

[features]
default = ["functions"]
trace = ["dep:tracing"]
functions = []

[dependencies]
inventory = { version = "0.3.4" }
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
serde_json_path = { path = "../serde_json_path" }

