[package]
name = "serde_json_path_core"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Trevor Hilton <trevor.hilton@gmail.com>"]
description = "Core types for the serde_json_path crate"
repository = "https://github.com/hiltontj/serde_json_path"
readme = "README.md"
keywords = ["json", "jsonpath", "json_path", "serde", "serde_json"]

[lib]

[features]
default = ["functions"]
trace = ["dep:tracing"]
functions = []

[dependencies]
inventory = { version = "0.3.15" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.67"
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
serde_json_path = { path = "../serde_json_path" }

