[package]
name = "serde_json_path_macros"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Trevor Hilton <trevor.hilton@gmail.com>"]
description = "Macros for the serde_json_path crate"
repository = "https://github.com/hiltontj/serde_json_path"
readme = "README.md"
keywords = ["json", "jsonpath", "json_path", "serde", "serde_json"]

[lib]

[dependencies]
serde_json_path_macros_internal = { path = "src/internal", version = "0.1.0" }
serde_json_path_core = { path = "../serde_json_path_core", version = "0.1.3" }
inventory = "0.3"
once_cell = "1"

[dev-dependencies]
serde_json = "1"

