[package]
name = "serde_json_path_macros"
version = "0.1.5"
edition = "2021"
license = "MIT"
authors = ["Trevor Hilton <trevor.hilton@gmail.com>"]
description = "Macros for the serde_json_path crate"
repository = "https://github.com/hiltontj/serde_json_path"
readme = "README.md"
keywords = ["json", "jsonpath", "json_path", "serde", "serde_json"]

[lib]

[dependencies]
# local crates:
serde_json_path_macros_internal = { path = "src/internal", version = "0.1.2" }
serde_json_path_core = { path = "../serde_json_path_core", version = "0.2.0" }

# crates.io crates:
inventory.workspace = true

[dev-dependencies]
serde_json = "1"

