[package]
name = "serde_json_path_macros_internal"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Trevor Hilton <trevor.hilton@gmail.com>"]
description = "Internal macro implementation for the serde_json_path crate"
repository = "https://github.com/hiltontj/serde_json_path"
readme = "README.md"
keywords = ["json", "jsonpath", "json_path", "serde", "serde_json"]

[lib]
proc-macro = true
path = "mod.rs"

[dependencies]
# crates.io crates:
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
